<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logo08"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/volkhov"
            android:text="@string/res_titulo"
            android:textAllCaps="true"
            android:textColor="#0A719F"
            android:textSize="16sp"
            android:typeface="normal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_numero"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintAssunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_assunto"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formAssunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_valor"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintDtAutuacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_dtAutuacao"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formDtAutuacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/btnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="#008000"
                android:textColor="#FFF"
                android:text="@string/res_btnSalvar" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnListar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0000FF"
                android:textColor="#FFF"
                android:text="@string/res_btnListar"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@id/btnSalvar"
                android:layout_toLeftOf="@id/btnSalvar"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btnlimpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#FF0000"
                android:layout_toStartOf="@id/btnListar"
                android:layout_toLeftOf="@id/btnListar"
                android:text="@string/res_btnLimpar" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>